working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -431,54 +431,55 @@
           </dl>
           <p>※ Shiren cannot pick up underwater items using a Phantasm Bracelet.</p>
           <h2 id="collecting_island_items">Collecting Island Items in Dungeons</h2>
-          <p>Text</p>
+          <p>Sometimes small islands (ground surrounded by water) get generated inside rooms.<br>The island always consists of 1 Spring and items or Gitan on the remaining ground tiles.<br>Islands only appear in Random Dungeons, and serves as a bonus chance to collect items.</p>
+          <p>The water can occasionally be frozen, in which case you can walk across and collect items without issue.</p>
           <h3 id="standard_methods">Standard Methods</h3>
           <dl>
             <dt>Scrolls</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Read an Evaporate, Freeze, or Wall Collapse scroll.</li>
+            <li>Place a Sanctaruy Scroll on the ground and wait for the items to hop across the water.</li>
+            <li>Write Evaporate, Freeze, or Wall Collapse on a Blank Scroll... but there are better uses for Blank Scroll.</li>
           </ul>
           <dl>
             <dt>Phantasm Bracelet</dt>
-            <dd></dd>
+            <dd>Simply walk over the waterway without having to use any other items.</dd>
           </dl>
           <h3 id="other_methods">Other Methods</h3>
           <dl>
             <dt>If a monster is in the middle</dt>
-            <dd>Text</dd>
+            <dd>Swing or throw a Swap Staff at the monster, and step on the Spring to return.<br>Take advantage of enemies that can fly over water by moving in a way where they make it onto the island.<br>You can also use a Knockback Staff (deals 7 tiles of knockback) to force a monster onto the island,<br>though you may need to use a Pickaxe or Tunnel Staff to make a line long enough to do so.</dd>
             <dt>Knockback Statue</dt>
-            <dd>Text</dd>
+            <dd>Get hit by an enemy's regular attack from 5 tiles away so that you land on the island.</dd>
             <dt>Spring</dt>
-            <dd>Text</dd>
+            <dd>Extremely low chance to land on the island. Often more trouble than it's worth, and just wastes time.<br>However, you do feel pretty clever when it actually works out.</dd>
             <dt>Log Trap</dt>
-            <dd>Text</dd>
+            <dd>If there happens to be one in a location where getting hit by the log pushes you onto the island.</dd>
             <dt>Flood Trap</dt>
-            <dd>Text</dd>
+            <dd>Items will be scattered randomly throughout the current floor after the flood, including island items.<br>Note that all items that are not inside pots will get wet, including scrolls and riceballs.</dd>
             <dt>Pull Staff</dt>
-            <dd>Text</dd>
+            <dd>Swing a Pull Staff at the island items to pull them toward you.<br>Recommended to prioritize pulling items rather than Gitan.<br>※ Leave a 1 tile gap between the item and yourself so that the item doesn't land in water.</dd>
             <dt>Knockback Staff</dt>
-            <dd>Text</dd>
+            <dd>Swing a knockback staff at the island items to knock them off of the island and onto land.<br>※ Pots will shatter when knockback is dealt to them. Also, check for traps beforehand where the item will land.</dd>
             <dt>Armordillo Tackle</dt>
-            <dd>Text</dd>
+            <dd>Get sent over to the island by an Armordillo family monster's tackle, and return by stepping on the Spring.<br>Carry a Balance Staff or place items on the ground prior to getting hit by the tackle so that you don't<br>drop items in the waterway after you land on the island.<br>※ Don't leave items on the ground if a Trader is present, or if you're concerned about stepping on a Pitfall.</dd>
           </dl>
           <h2 id="how_to_use_the_storage">How to use the Storage</h2>
-          <p>Text</p>
+          <p>60 items can be deposited through the attendant, and 35 items can be placed on the floor. (95 items total).<br>This might seem like a lot, but once you clear Onigashima and reach post-game,<br>you'll likely run out of storage space quickly if you try to store everything.</p>
+          <p>Items inside pots will vanish when they are left in storage, and the pot's size will not be returned to normal.<br>This can make it a bit of a chore to manage items when entering dungeons that don't allow carry-in items.<br>So this section aims to offer tips and techniques to make the most of the available storage space.</p>
           <dl>
             <dt>Take items out of pots</dt>
-            <dd>Text</dd>
+            <dd>As mentioned above, items inside pots will vanish when left in storage, so take out all items before depositing them.<br>Pour out all water from Water Pots before leaving them in storage as well.</dd>
             <dt>Deposit important items</dt>
-            <dd>Text</dd>
+            <dd>Talk to the man on the right inside the storage for details why this should be done.<br>Such items include strengthened equipment, rare bracelets and grasses, staves with lots of uses, etc.</dd>
             <dt>Place pots on the floor</dt>
-            <dd>Text</dd>
+            <dd>Being able to pick up commonly used items like Storage Pots saves time when heading to dungeons.</dd>
             <dt>Synthesize staves together</dt>
-            <dd>Text</dd>
+            <dd>Combining same name staves adds the number of uses together, and also saves on storage space.</dd>
             <dt>Synthesize items you plan on synthesizing</dt>
-            <dd>Text</dd>
+            <dd>If you have secondary items that you're planning on synthesizing later...<br>Ex: You don't have a Manji-Kabura, but have Crescent Arm, Flame Grass, Fish Spear, Mallet, and Golden Sword.<br>Instead of keeping all 5 items in storage, synthesize the other four seals onto Crescent Arm (火水木金).<br>Then you can synthesize that onto a Manji-Kabura in the correct seal order, while cutting down on storage space.</dd>
             <dt>Deposit traps</dt>
             <dd>Text</dd>
             <dt>Be careful with Surprise Pots</dt>
