working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -481,44 +481,60 @@
             <dt>Synthesize items you plan on synthesizing</dt>
             <dd>If you have secondary items that you're planning on synthesizing later...<br>Ex: You don't have a Manji-Kabura, but have Crescent Arm, Flame Grass, Fish Spear, Mallet, and Golden Sword.<br>Instead of keeping all 5 items in storage, synthesize the other four seals onto Crescent Arm (火水木金).<br>Then you can synthesize that onto a Manji-Kabura in the correct seal order, while cutting down on storage space.</dd>
             <dt>Deposit traps</dt>
-            <dd>Text</dd>
+            <dd>It's possible to deposit traps obtained in Halfway Well or through the use of a Trapper Bracelet.<br>You could set a Landmine down and use it to destroy unwanted items, or a Strip trap to unequip cursed items.<br>Pitfalls are nice when searching for Perfect Wood in Shuten Trail Mid or Dragon Tile Bracelets in Onigashima.<br>However, if you set a trap down inside the storage, you'll need a Trapper Bracelet to pick it back up.</dd>
             <dt>Be careful with Surprise Pots</dt>
-            <dd>Text</dd>
-            <dt>Mixer synthesis inside the storage</dt>
-            <dd>Text</dd>
+            <dd>Surprise Pots can contain monsters or pent-up anger, making them risky to throw inside the storage.<br>If you do decide to throw one, make sure you won't destroy important items in the event it explodes,<br>and be ready to exit the storage in the event monsters are inside. (They'll be gone when you re-enter).</dd>
+            <dt>※ Mixer synthesis inside the storage</dt>
+            <dd>If you register a <a href="/shiren2/html/system/monsters.html#mixer_family">Mixer</a> with Monster Kingdom, you can synthesize inside the storage as much as you want.<br>You'll want to leave an open spot on the floor so that the synthesized item has somewhere to land.<br>It's not possible to attack ally monsters directly, so another means to defeat the Mixer is needed.<br>You could use a weapon with the 火 seal to chip away at it, but the fastest method is to make use of a Landmine.<br>Place the Landmine in a corner, and trigger it by shooting an arrow when Mixer is next to it.<br>The downside of this method is that you won't be able to leave items near the Landmine.</dd>
           </dl>
-          <p>Text</p>
-          <pre class="diagram"></pre>
-          <p>Text</p>
+          <p>Example placement:</p>
+          <pre class="diagram">
+            ■■■■
+            □ML■
+            □M□■　　M = Mixer
+            □□□■　　L = Landmine
+            □□□■　　S = Shiren
+            □SA■　　A = Arrow or Iron Arrow trap
+            ■■■■
+          </pre>
+          <p>Shoot an arrow to the right so that the Arrow Trap activates when Mixer is standing next to the Landmine.</p>
+          <p>Another method is to surround a Trip Stone with Sanctuary Scrolls in a corner,<br>and then throw an item at Mixer after synthesizing while a Dragon Tile Bracelet is equipped.<br>Mixer will trip and drop the item, so return it to its pot and send it out again to synthesize<br>without having to go all the way back to Monster Kingdom each time.</p>
           <h3 id="good_items_to_store">Good Items to Store</h3>
           <dl>
             <dt>Revival Grass</dt>
-            <dd>Text</dd>
+            <dd>Fantastic item that not only revives you when you collapse, but also restores fullness and strength.<br>You don't need as many once you have a weapon and shield with +99 upgrade value,<br>but it's still a good idea to carry 3 Revival Grass when entering Sealed Room.<br>Recommended to keep 10 or so inside the storage at all times.</dd>
             <dt>Wall Collapse Scroll</dt>
-            <dd>Text</dd>
+            <dd>Stockpiled when searching for <a href="/shiren2/html/system/golden-interval.html">Golden Intervals</a>.<br>Go ahead and use them up whenever you feel ready to visit the Golden Interval of your choice.</dd>
             <dt>Escape Scroll</dt>
-            <dd>Text</dd>
+            <dd>Nice for emergencies, or if you're finished with whatever goal you had in mind when entering a dungeon.<br>1~2 is probably enough, but if you want to stockpile more, you can loop 99F of Sealed Room.</dd>
             <dt>Blank Scroll</dt>
-            <dd>Text</dd>
+            <dd>You can never have too many Blank Scrolls. You might not need other scrolls if you have lots of these.</dd>
             <dt>Restock Scroll</dt>
-            <dd>Text</dd>
+            <dd>Stockpiled when searching for Dragon Tile Bracelets in Onigashima.<br>No reason to have them in storage once you've obtained the number of bracelets you needed.<br>(7 bracelets = 1 Daisangen Sword + 1 Daisangen Shield + 1 to equip when desired).</dd>
             <dt>Sanctuary Scroll</dt>
-            <dd>Text</dd>
+            <dd>Nice to have on the floor inside the storage in case monsters appear from a Surprise Pot.<br>Place 3 on the ground in a corner to make it easier to synthesize inside the storage using a Mixer.<br>Can be used alongside Perfect Iron Sand to put on a <a href="https://www.youtube.com/watch?v=jsLzFz1w6GE">monster battle royale</a> for fun.<br>Sanctuary Scrolls that are stuck to the ground will be reverted to being rolled up when you re-enter the storage.</dd>
           </dl>
-          <pre class="diagram"></pre>
+          <pre class="diagram">
+            S:Sanctuary M:Mixer
+            ■■■■■■
+            □□□SM■
+            □□□SS■
+            □□□□□■
+            □□□□□■
+          </pre>
           <dl>
             <dt>Suction Scroll</dt>
-            <dd>Text</dd>
+            <dd>Stockpiled when strengthening equipment using an Upgrade Pot,<br>or when hunting for rare items using Presto Pot inside Sealed Room.</dd>
             <dt>Identify Scroll</dt>
-            <dd>Text</dd>
+            <dd>Nice when you want to identify pots or staves inside new dungeons. 2 or so should be enough.</dd>
             <dt>Purify Scroll</dt>
-            <dd>Text</dd>
+            <dd>It's important to be able to remove curses when checking for equipment upgrade values. 3 should be enough.</dd>
             <dt>Staves</dt>
-            <dd>Text</dd>
+            <dd>Staves can be used multiple times, as opposed to only once like grasses and scrolls.<br>Keep the helpful ones, and synthesize same name staves together to reduce the amount of space they take up.</dd>
             <dt>Storage Pot</dt>
-            <dd>Text</dd>
+            <dd>Expanding your inventory is great, though it's not as necessary once you have strong equipment.<br>Keep 11 Storage Pots expanded to a size of 8, since you can carry-in a max of 11 items into dungeons.</dd>
             <dt>Strength Bracelet</dt>
-            <dd>Text</dd>
+            <dd>Stockpiled for Asuka. It's ideal to have her equip 2 Strength Bracelets at all times.<br>Of course, there's no need to keep them in storage if you prefer going solo.</dd>
           </dl>
           <h2 id="combat_techniques">Combat Techniques</h2>
           <p>Text</p>
