working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -165,7 +165,7 @@
           </ul>
           <p>Giant Riceball should still be prioritized because it increases max fullness by 7%.<br>It's common to end up with multiple riceballs over time when you have a Storage Pot,<br>so the idea is to prioritize eating riceballs with low fullness restoration to free up inventory space.</p>
           <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
-          <img src="/shiren2/image/other/level_up_monster.png" width="863" height="160" alt="level_up_monster.png" class="image_padding">
+          <img src="/shiren2/image/other/level_up_monster.png" width="863" height="160" alt="level_up_monster.png">
           <p>Eating <a href="/shiren2/html/item/grass.html#happy_grass">Happy Grass</a> increases level by 1, but it can also be thrown at a monster to level them up.<br>You can utilize this to create a strong enemy, and then defeat them for a large amount of experience points,<br>with the end result of gaining multiple level ups as opposed to just one from eating the Happy Grass.</p>
           <p><a href="/shiren2/html/item/staves.html#happy_staff">Happy Staff</a> can also be used to level up an enemy monster.<br><a href="/shiren2/html/system/monsters.html#snacky">Snacky</a> can spawn on early floors in dungeons like <a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a>,<br>possibly resulting in a monster defeating it and leveling up.<br>Leveling up a Pit Mamel into a Cave Mamel early on is highly recommended.</p>
           <p>Of course, higher level enemies are much stronger, so you have to be careful with how you defeat them.<br>There are many ways to defeat high level enemies, but here are some ideas:</p>
@@ -285,7 +285,7 @@
             </tbody>
           </table>
           <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
-          <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png" class="image_padding">
+          <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png">
           <p>Synthesizing <a href="/shiren2/html/item/grass.html#otogiriso">Otogiriso</a> onto a shield or weapon lets Shiren restore HP when he receives or deals damage.<br>One 弟 seal restores 4 HP, and the amount of HP restored can be increased by <a href="/shiren2/html/system/synthesis-seals.html#stacked_effects">stacking seals</a>.</p>
           <p>For example, if you have 5 弟 seals on a shield, 15 HP will be restored every time you get hit by an attack.<br>So, stacking 5 弟 seals pretty much nullifies any attack that deals 15 or less damage!<br>The HP restoration also takes effect when you're hit by ranged attacks like Dragon fire.<br>Furthermore, whereas the HP restoration only takes effect once per turn with weapons (1 attack per turn),<br>there's no limit for shields - you'll restore HP after each and every hit you take on that turn.</p>
           <p>As you can see, 弟 on a shield is easily one of the best seals in the game to help with consistency.<br>Prioritize synthesizing it onto your shield once you reach Shuten Trail Hard.</p>
@@ -537,18 +537,23 @@
             <dd>Stockpiled for Asuka. It's ideal to have her equip 2 Strength Bracelets at all times.<br>Of course, there's no need to keep them in storage if you prefer going solo.</dd>
           </dl>
           <h2 id="combat_techniques">Combat Techniques</h2>
-          <p>Text</p>
+          <p>This section covers tips against specific monsters, or monsters with similar characteristics as the ones listed.<br>For monsters that aren't listed here, check the individual dungeon or monster pages for more information.<br>These techniques are pretty standard, so it's best to practice them until they become second nature.</p>
+          <p>The order of monsters is based on the order of encountering the monsters while playing the story dungeons.</p>
           <h3 id="shuten_trail_easy"><a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a></h3>
           <h4 id="best_way_to_defeat_droplet_ninja">Best Way to defeat Droplet Ninja</h4>
-          <p>Text</p>
+          <p>Monsters that place traps on the ground when they're defeated can be problematic in hallways.<br>Stepping on a Droplet Trap isn't too bad, but a Landmine or Summon Trap is another story.<br>So it's good to get in the habit of having them follow you into a room before defeating them.<br>Also, they won't be able to place a trap if there is already an item or trap on the ground.</p>
+          <p>So you can also have them follow you in a way where they're positioned on top of an item or trap.<br>Shop entrances and stairs can block trap placements as well, so they can be utilized if present.<br>If you're sandwiched in a hallway, prioritize defeating the monster that won't place a trap on the ground first.<br>That said, if you find it to be too risky to retreat to a room, you can just defeat the trap placing monster.</p>
           <h4 id="zalokleft_stole_my_item">Zalokleft stole my Item!</h4>
-          <p>Text</p>
+          <p>This is pretty common. Ideally you'd defeat the Zalokleft before it steals, but sometimes it's unavoidable.<br>Zaloklefts warp away after stealing an item, but the monster will always be somewhere on the current floor.<br>The stolen item can be retrieved by defeating the Zalokleft, so if the item was important, be sure to hunt it down.</p>
+          <p>Zalokleft will run away from Shiren after stealing, so you'll need to figure out a way to get close enough to attack it.<br>Most maps have a room or hallway that leads to a dead end, so you could chase it into one of those areas.<br>If the map doesn't have a dead end, you can wait in a hallway until it appears next to you.<br>This works because monsters can only see 1 tile ahead when inside hallways,<br>meaning the Zalokleft won't detect Shiren until it's right next to him.</p>
+          <p>Items can also be used to catch up to it (ex: Slow Staff), or to defeat it from a distance (ex: arrows, Lightning Scroll).<br>These strategies work for Gamarra and Mr. Drone family monsters as well,<br>but they can be trickier to chase down since most of them move at double speed.</p>
           <h4 id="how_to_fight_horse_ronin_bow_boy">How to fight Horse Ronin and Bow Boy</h4>
-          <p>Text</p>
+          <p>These monsters have a ranged attack, so you'll receive damage if you try to lure them closer by stepping in place.<br>They can only use their ranged attack if Shiren is lined up with them (up, down, left, right, diagonal).<br>So the idea is to move in a way that breaks the line, forcing them to step closer to try and line up again.<br>You'll be able to avoid their ranged attacks, and can attack them directly once they're next to you.<br>This strategy works for most monsters that have a ranged special attack, so it's good to make it a habit.</p>
+          <p>Also, note that such monsters can end up hitting other monsters when they use their ranged attacks.<br>This can lead to monsters like Horse Ronin leveling up, which can be quite a problem early on.<br>It's important to move in a way that prevents other monsters from standing between the ranged monster and Shiren,<br>even at the cost of taking an extra hit from an enemy - unless you want to intentionally level them up.</p>
           <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
           <h4 id="how_to_fight_boy_cart">How to fight Boy Cart</h4>
-          <img src="/shiren2/image/other/boy_cart.png" width="399" height="160" alt="boy_cart.png" class="image_padding">
-          <p>Text</p>
+          <img src="/shiren2/image/other/boy_cart.png" width="399" height="160" alt="boy_cart.png">
+          <p>Boy Cart not only shoots arrows from a distance, but it also likes to keep a set amount of distance between itself and Shiren.</p>
           <h4 id="luring_gale">Luring Gale</h4>
           <p>Text</p>
           <h4 id="how_to_fight_kengo">How to fight Kengo</h4>
