finished the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -553,25 +553,32 @@
           <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
           <h4 id="how_to_fight_boy_cart">How to fight Boy Cart</h4>
           <img src="/shiren2/image/other/boy_cart.png" width="399" height="160" alt="boy_cart.png">
-          <p>Boy Cart not only shoots arrows from a distance, but it also likes to keep a set amount of distance between itself and Shiren.</p>
+          <p>Boy Cart not only shoots arrows from a distance, but it also likes to keep a set distance between itself and Shiren.<br>However, it does have a weakness - once it enters a hallway, its field of view will be limited to 1 tile.<br>This means it will repeatedly move forward, see Shiren, and take a step back without attacking.<br>So by luring it into a hallway, you can defeat it without using items or taking any damage.<br>Boy Cart's Iron Arrows have high attack, so this is a valuable technique to remember.</p>
+          <p>However, Boy Cart will shoot an arrow if there is a wall or monster behind it, making it unable to retreat.</p>
           <h4 id="luring_gale">Luring Gale</h4>
-          <p>Text</p>
+          <p>If there are 2 open tiles between you and Gale, perform a regular attack to have it move next to you.<br>And if there is only 1 open tile, take a step back to lure it next to you without taking damage.<br>This technique works for all monsters that move at double speed. (But not triple speed).</p>
+          <p>Water Strider is a bit of an exception, since it will try to line up with Shiren like Boy Cart if it's carrying an item.</p>
           <h4 id="how_to_fight_kengo">How to fight Kengo</h4>
-          <p>Text</p>
+          <p>Kengo can disarm the shield you have equipped, which at first might not sound too terrible.<br>However, when it disarms the shield, the shield will be knocked away and fly behind you.<br>The shield will be lost if it hits another character, flies outside of the map, or lands on a Landmine, etc.<br>In order to prevent permanently losing your shield, it's best to unequip it beforehand when fighting Kengo.</p>
+          <p>But what if you don't have the chance to unequip it, or what if you're about to lose the fight without equipping it?<br>In that case, keep the shield equipped, and move toward a wall so that your back is against the wall.<br>That way even if your shield is disarmed, it won't fly anywhere, and you can simply pick it up.<br>Kengo family monsters are the leading cause of equipment loss, so it's important to remember this.</p>
           <h3 id="shuten_trail_hard"><a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a></h3>
           <h4 id="how_to_fight_wolf_droid">How to fight Wolf Droid</h4>
-          <p>Text</p>
+          <p>This can be said for all monsters that deal explosions with their special attacks like Wolf Droid and Pop Tank,<br>but it's common for these monsters to level up as a result of defeating other monsters that get caught in the blasts.<br>Unexpected level ups can be scary, so if there is a weakened monster nearby, prioritize defeating it first.<br>That said, you'll likely encounter leveled up monsters even when you're being careful,<br>so keep some items reserved for such a situation so you're not caught off guard.</p>
           <h3 id="onigashima"><a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a></h3>
           <h4 id="how_to_fight_twisty_hani">How to fight Twisty Hani</h4>
-          <p>Text</p>
+          <p>Twisty Hani has high HP and defense despite appearing on early floors, so it's difficult to defeat it in a single hit.<br>Its dance will lower your level by 1, which can be devastating if you take a long time to defeat it,<br>so you'll need to come up with ways of defeating it without getting hit by its special attack.</p>
+          <p>The safest method is to equip a Level Lock Bracelet, which completely blocks the level down effect of the dance.<br>Only equip it when you're fighting Twisty Hani so that the bracelet lasts a long time.<br>Though some would argue it's not worth taking up an inventory slot for an item that only has one small use case.</p>
+          <p>The standard method is to weaken the Twisty Hani with an arrow, and then finish it off with a regular attack.<br>Wooden Arrows lack power, so it's best to use Iron Arrows instead. (or 2 Wooden Arrows).<br>Some other options include the 火 seal on a weapon, cannonballs, stones, staves to inflict status conditions, etc.<br>These can also be used against other monsters, so it's more efficient than keeping a Level Lock Bracelet on hand.</p>
+          <p>Twisty Hani is always generated asleep, and only wakes up when Shiren walks next to it,<br>so you can simply ignore them if you don't have the means to defeat them safely.<br>However, defeating a Twisty Hani provides 300 experience points, and they also have a high item drop rate,<br>so it's good to hunt them whenever you have the means to do so.</p>
           <h4 id="checking_for_copycat_mask">Checking for Copycat Mask</h4>
-          <p>Text</p>
+          <p>Copycat Mask monsters are always generated disguised as another monster selected from the current floor's table.<br>There's no way to determine if a monster is real or fake from their appearance.<br>This isn't an issue if you simply defeat the monsters you come across, but can be a problem when<br>you want to synthesize using Mixers, throw an Extinction Scroll at a troublesome monster, etc.</p>
+          <p>Here are some characteristics you can watch for:</p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Copycat Mask monsters are always generated awake (excluding Monster Houses), so sleeping monsters are all real.</li>
+            <li>An unusual message is displayed when a Knowledge Staff is swung at a disguised Copycat Mask monster.</li>
+            <li>The disguise will be canceled if the Copycat Monster is sealed. (Don't use this method to check for real Mixers).</li>
+            <li>The disguise will be canceled if the Copycat Monster hits you and you have a shield with the 識 seal (Identify Scroll).</li>
+            <li>Likely fake if its attack strength doesn't feel right, or if it never uses special attacks.</li>
           </ul>
         </div>
       </main>
