working on the advanced techniques page

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -23,7 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Advanced Techniques</h2>
-          <p>Text</p>
+          <p>This page provides information on techniques that can be useful inside dungeons.<br>It would take a while to carefully read all of the individual pages on this site,<br>so this page aims to consolidate some of the information to be used as a quick reference.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#weapons_shields">Weapons・Shields</a>
               <ul>
@@ -163,13 +163,30 @@
           </ul>
           <h2 id="weapons_shields">Weapons・Shields</h2>
           <h3 id="increasing_max_synthesis_slots">Increasing Max Synthesis Slots</h3>
-          <p>Text</p>
+          <p>Max synthesis slots increases by 1 if you use a Blank Scroll as a secondary item in synthesis.<br>The max number of slots is 16 slots, and <a href="/shiren2/html/item/weapons#mijinha">Mijinha</a> and <a href="/shiren2/html/item/shields#sacred_shield">Sacred Shield</a> are the only items that innately have 16 slots.</p>
           <h3 id="transferring_upgrade_value_only">Transferring Upgrade Value Only</h3>
-          <p>Text</p>
+          <p>You can transfer upgrade value without transferring seals by using equipment with filled slots as a base in synthesis.<br>So don't discard items like Disposable Shield+2, but instead wait until your main shield's synthesis slots are filled.</p>
           <h3 id="synthesizing_without_curses">Synthesizing Without Transferring Curses</h3>
-          <p>Text</p>
+          <p>Curses are treated as seals in Shiren 2 (呪).<br>Therefore you can synthesize without transferring a curse if you use equipment with filled slots as a base.<br>On a related note, Straw Voodoll family monsters won't be able to curse any equipment that has filled slots.</p>
           <h3 id="remove_curses_using_straw_voodoll">Remove Curses Using Straw Voodoll Monsters</h3>
-          <p>Text</p>
+          <p>Equipment will be purified when you take control of a <a href="/shiren2/html/system/monsters.html#straw_voodoll_family">Straw Voodoll</a> family monster using a Possession Staff.</p>
+          <ul>
+            <li>Straw Voodoll
+              <ul>
+                <li>Equipped shield.</li>
+              </ul>
+            </li>
+            <li>Nailed Voodoll
+              <ul>
+                <li>Equipped weapon, shield, and bracelets.</li>
+              </ul>
+            </li>
+            <li>Spiked Voodoll
+              <ul>
+                <li>All equipment in your inventory.</li>
+              </ul>
+            </li>
+          </ul>
           <h3 id="long_lasting_dried_bonito">Long-Lasting Dried Bonito</h3>
           <p>Text</p>
           <h3 id="gamble_synthesis">Gamble Synthesis</h3>
