--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -25,35 +25,35 @@
           <h2 class="page_heading">FAQ</h2>
           <p>This page provides answers for frequently asked questions.</p>
           <ul id="quick_links" class="quick_links">
-            <li><a href="">How do I play Shiren 2 in English?</a></li>
-            <li><a href="">Anything I should know before playing?</a></li>
-            <li><a href="">Does the 回 seal stack?</a></li>
-            <li><a href="">Does the 弟 seal stack?</a></li>
-            <li><a href="">Do seals need to be next to each other to stack?</a></li>
-            <li><a href="">Where can I find Perfect Wood?</a></li>
-            <li><a href="">What monster should I capture in Road to the End?</a></li>
-            <li><a href="">Do you lose upgrade values and seals when making Fiery Fuuma?</a></li>
+            <li><a href="how_to_play_in_english">How do I play Shiren 2 in English?</a></li>
+            <li><a href="before_playing">Anything I should know before playing?</a></li>
+            <li><a href="healing_sword_seal_stack">Does the 回 seal stack?</a></li>
+            <li><a href="otogiriso_seal_stack">Does the 弟 seal stack?</a></li>
+            <li><a href="do_seals_need_to_be_next">Do seals need to be next to each other to stack?</a></li>
+            <li><a href="where_to_find_perfect_wood">Where can I find Perfect Wood?</a></li>
+            <li><a href="which_monster_road_to_the_end">What monster should I capture in Road to the End?</a></li>
+            <li><a href="do_stats_reset_fiery_fuuma">Do you lose upgrade values and seals when making Fiery Fuuma?</a></li>
           </ul>
-          <h3 id="">How do I play Shiren 2 in English?</h3>
+          <h3 id="how_to_play_in_english">How do I play Shiren 2 in English?</h3>
           <p>The English Patch hasn't been released yet.<br>Keep on eye on the <a href="https://krikzz.com/forum/index.php?topic=8495">project thread</a> for the latest news regarding the patch.</p>
-          <h3 id="">Anything I should know before playing?</h3>
+          <h3 id="before_playing">Anything I should know before playing?</h3>
           <ul>
             <li>There's a glitch that hard-locks the game, so it would be a good idea to read through the <a href="/shiren2/html/system/glitches.html">Glitches</a> page.</li>
             <li>Asuka and Mamo will lose their items if [Return to Napus Village] is selected at the main menu.<br>This applies even if Asuka and Mamo weren't brought along for the current adventure.<br>So if you don't want them to lose their items, don't select [Return to Napus Village].<br>However, if the game freezes, you won't have any other option than to select [Return to Napus Village].<br>So it's best to keep important items in storage, rather than having Asuka or Mamo carry them.<br>Note that copying a journal will also delete Asuka and Mamo's items in the copy.</li>
           </ul>
-          <h3 id="">Does the 回 seal stack?</h3>
+          <h3 id="healing_sword_seal_stack">Does the 回 seal stack?</h3>
           <p>No, the 回 seal (Healing Sword) does not stack. So only use one seal.</p>
-          <h3 id="">Does the 弟 seal stack?</h3>
+          <h3 id="otogiriso_seal_stack">Does the 弟 seal stack?</h3>
           <p>Yes, having multiple 弟 seals (Otogiriso) will increase the amount of HP that is restored.<br>Note that it restores HP separately from the 回 seal, so they can be used together.</p>
-          <h3 id="">Do seals need to be next to each other to stack?</h3>
+          <h3 id="do_seals_need_to_be_next">Do seals need to be next to each other to stack?</h3>
           <p>No, the order of seals doesn't matter for stacked effects.</p>
-          <h3 id="">Where can I find Perfect Wood?</h3>
+          <h3 id="where_to_find_perfect_wood">Where can I find Perfect Wood?</h3>
           <p>Perfect Wood can only be found in Shuten Trail <span class="warning_text">Mid</span> (8F~).<br>It cannot be obtained in Shuten Trail Hard.</p>
-          <h3 id="">What monster should I capture in Road to the End?</h3>
+          <h3 id="which_monster_road_to_the_end">What monster should I capture in Road to the End?</h3>
           <p>It's best to capture an Armordillo family monster, so that you can collect items at will.<br>Using this strategy takes a long time, but it's one of the most consistent ways to clear Road to the End.</p>
           <p>However, Armordillo monsters are rather weak and prone to accidents,<br> so it's a good idea to capture a second one if you happen to come across a second Monster Pot.<br>Armordillo Pop is ideal, but an Armordillo Bro can also be used if you're careful.</p>
           <p>Other noteworthy monsters include Monsoon Doll, Gazelle Pope, Hyper Gazer, and Shihan.</p>
-          <h3 id="">Do you lose upgrade values and seals when making Fiery Fuuma?</h3>
+          <h3 id="do_stats_reset_fiery_fuuma">Do you lose upgrade values and seals when making Fiery Fuuma?</h3>
           <p>Yes, upgrade value and seals will be lost when the Katana+99 is transformed into a Fiery Fuuma.</p>
           <p>This is also the case when the following weapons or shields are created:<br>Kaburasutegi, Daisangen Sword, Ryujin Sword, Wonder Pickaxe, Healing Sword,<br>Helix Shield, Daisangen Shield, Nirvana Shield.</p>
         </div>
