--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -25,14 +25,14 @@
           <h2 class="page_heading">FAQ</h2>
           <p>This page provides answers for frequently asked questions.</p>
           <ul id="quick_links" class="quick_links">
-            <li><a href="how_to_play_in_english">How do I play Shiren 2 in English?</a></li>
-            <li><a href="before_playing">Anything I should know before playing?</a></li>
-            <li><a href="healing_sword_seal_stack">Does the 回 seal stack?</a></li>
-            <li><a href="otogiriso_seal_stack">Does the 弟 seal stack?</a></li>
-            <li><a href="do_seals_need_to_be_next">Do seals need to be next to each other to stack?</a></li>
-            <li><a href="where_to_find_perfect_wood">Where can I find Perfect Wood?</a></li>
-            <li><a href="which_monster_road_to_the_end">What monster should I capture in Road to the End?</a></li>
-            <li><a href="do_stats_reset_fiery_fuuma">Do you lose upgrade values and seals when making Fiery Fuuma?</a></li>
+            <li><a href="#how_to_play_in_english">How do I play Shiren 2 in English?</a></li>
+            <li><a href="#before_playing">Anything I should know before playing?</a></li>
+            <li><a href="#healing_sword_seal_stack">Does the 回 seal stack?</a></li>
+            <li><a href="#otogiriso_seal_stack">Does the 弟 seal stack?</a></li>
+            <li><a href="#do_seals_need_to_be_next">Do seals need to be next to each other to stack?</a></li>
+            <li><a href="#where_to_find_perfect_wood">Where can I find Perfect Wood?</a></li>
+            <li><a href="#which_monster_road_to_the_end">What monster should I capture in Road to the End?</a></li>
+            <li><a href="#do_stats_reset_fiery_fuuma">Do you lose upgrade values and seals when making Fiery Fuuma?</a></li>
           </ul>
           <h3 id="how_to_play_in_english">How do I play Shiren 2 in English?</h3>
           <p>The English Patch hasn't been released yet.<br>Keep on eye on the <a href="https://krikzz.com/forum/index.php?topic=8495">project thread</a> for the latest news regarding the patch.</p>
